# hf-litmus

./: .gitignore  .gitmodules  LICENSE.md  README.md  flake.nix  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
hf_litmus/: __init__.py  cli.py  config.py  dashboard.py  deep_analysis.py  error_classifier.py  exceptions.py  export_runner.py  feature_areas.py  hf_enumeration.py  ingest_runner.py  migrate_v1_to_v2.py  model_tags.py  models.py  notion_publisher.py  orchestrator.py  report_generator.py  state.py  summary_generator.py
hf_litmus/ingest/export/: glm4_moe_export.py  gpt_oss_export.py  minimax_m2_export.py  model_patch.py  moe_ops.py  pyproject.toml  torch_export.py
hf_litmus/ingest/exports/gemma-4-31b/: metadata.json  root.fx
hf_litmus/ingest/runtime/tron_ingest_tools/: README.md  __init__.py  export.py  ingest.py  model.py
hf_litmus/prompts/: __init__.py  deep_analysis_prompt.md
ingest/export/: glm4_moe_export.py  minimax_m2_export.py  model_patch.py  pyproject.toml
ingest/runtime/tron_ingest_tools/: __init__.py  export.py  model.py
tests/: test_config.py  test_error_classifier.py  test_feature_areas.py  test_imports.py  test_model_tags.py  test_models.py  test_state.py
