[project]
name = "hf-litmus"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.25.0",
  "protobuf>=3.20.0",
  "pyyaml>=6.0",
  "filelock>=3.12",
]

[project.optional-dependencies]
notion = ["mcp>=1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"hf_litmus" = ["prompts/*.md", "ingest/**/*"]

[project.scripts]
hf-litmus = "hf_litmus.cli:main"
